--- a/WebContent/userview.html
+++ b/WebContent/userview.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="css/trimbledemo.css">
+<link rel="stylesheet" type="text/css" href="css/filesync.css">
 <head>
 <meta charset="UTF-8">
-<title>Trimble File Sync Demo</title>
+<title>File Sync Demo</title>
 <script src="js/jquery-1.11.0.js"></script>
 <script>
 
@@ -206,7 +206,7 @@ Please select a company to begin.<br />
 <div id="loadingMessage3">Loading your Deliveries folder...<br /></div>
 <div id="fileListMessage">Your Deliveries folder contains the following files:<br /></div>
 <table id="fileList"></table><br /><br />
-<form action="http://test.simpleecm.com/trimbledemo2.html"><button id="nextButton" type="submit">View as Company A admin &#62;</button></form>
+<form action="http://www.yoursite.com/companyview.html"><button id="nextButton" type="submit">View as Company A admin &#62;</button></form>
 <div id="injectionDiv" ></div></div>
 </body>
 </html>
